[workspace.package]
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "engine-bencher",
    "memtable-nursery",
    "parquet-bencher",
]
resolver = "2"

[workspace.dependencies]
arrow-array = "43"
arrow-row = "43"
arrow-schema = "43"
api = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/api" }
common-base = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/common/base" }
common-config = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/common/config" }
common-runtime = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/common/runtime" }
common-telemetry = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/common/telemetry" }
common-time = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/common/time" }
datatypes = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/datatypes" }
futures-util = "0.3"
humantime-serde = "1"
log-store = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/log-store" }
mito2 = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/mito2" }
object-store = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/object-store" }
opendal = { git = "https://github.com/apache/incubator-opendal.git", rev = "7d5524f35f29f7eda8131e8b0873590b7cbe34ab", features = [
    "layers-tracing",
    "layers-metrics",
] }
parquet = "43"
serde = { version = "1", features = ["derive"] }
storage = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/storage" }
store-api = { path = "/Users/evenyag/codes/greptime/bench-mito2/src/store-api" }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.7"
