[workspace.package]
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "engine-bencher",
    "memtable-nursery",
    "parquet-bencher",
]
resolver = "2"

[workspace.dependencies]
arrow-array = "43"
arrow-row = "43"
arrow-schema = "43"
api = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
common-base = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
common-config = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
common-runtime = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
common-telemetry = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
common-time = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
datatypes = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
futures-util = "0.3"
humantime-serde = "1"
log-store = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
mito2 = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
object-store = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
opendal = { git = "https://github.com/apache/incubator-opendal.git", rev = "7d5524f35f29f7eda8131e8b0873590b7cbe34ab", features = [
    "layers-tracing",
    "layers-metrics",
] }
parquet = "43"
serde = { version = "1", features = ["derive"] }
storage = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
store-api = { git = "https://github.com/evenyag/greptimedb", rev = "364eed91363de81552feae1504ef9461a3c76318" }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.7"
