[workspace.package]
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "engine-bencher",
    "memtable-nursery",
    "parquet-bencher",
]
resolver = "2"

[workspace.dependencies]
arrow-array = "47"
arrow-row = "47"
arrow-schema = "47"
# branch: bench/mito2
api = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
common-base = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
common-config = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
common-runtime = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
common-telemetry = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
common-time = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
datatypes = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
futures-util = "0.3"
humantime-serde = "1"
log-store = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
mito2 = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
object-store = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
opendal = { git = "https://github.com/apache/incubator-opendal.git", rev = "7d5524f35f29f7eda8131e8b0873590b7cbe34ab", features = [
    "layers-tracing",
    "layers-metrics",
] }
parquet = "47"
serde = { version = "1", features = ["derive"] }
storage = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
store-api = { git = "https://github.com/evenyag/greptimedb", rev = "42257dba62d846ff97067570bed0bed3a3ba9964" }
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.7"
