[package]
name = "engine-bencher"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-base = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
common-runtime = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
common-telemetry = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
datatypes = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
flume = "0.10"
futures-util.workspace = true
humantime-serde.workspace = true
log-store = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
object-store = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
once_cell = "1"
parquet = { workspace = true, features = ["async"] }
serde.workspace = true
storage = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
store-api = { git = "https://github.com/GreptimeTeam/greptimedb.git", rev = "0e937be3f5522a0baf4d2b300205effb5e85e3a1" }
tokio = { workspace = true, features = ["full"] }
toml.workspace = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
