[package]
name = "engine-bencher"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api.workspace = true
common-base.workspace = true
common-config.workspace = true
common-runtime.workspace = true
common-telemetry.workspace = true
datatypes.workspace = true
flume = "0.10"
futures-util.workspace = true
humantime-serde.workspace = true
log-store.workspace = true
memtable-nursery = { path = "../memtable-nursery" }
mito2.workspace = true
object-store.workspace = true
once_cell = "1"
parquet = { workspace = true, features = ["async"] }
serde.workspace = true
storage.workspace = true
store-api.workspace = true
tikv-jemallocator = "0.5"
tikv-jemalloc-ctl = "0.5"
tokio = { workspace = true, features = ["full"] }
toml.workspace = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
