[package]
name = "parquet-bencher"
version.workspace = true
edition.workspace = true

[[bin]]
name = "parquet-bencher"
path = "bin/main.rs"

[[bin]]
name = "convert-dict"
path = "bin/convert-dict.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array.workspace = true
arrow-row.workspace = true
arrow-schema.workspace = true
async-compat = "0.2"
futures-util.workspace = true
humantime-serde.workspace = true
opendal = "0.30"
parquet = { workspace = true, features = ["async"] }
tokio.workspace = true
toml.workspace = true
serde.workspace = true
tempfile = "3.4"
clap = { version = "4.1", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
